# amaranth-boards

./: .env.toolchain  .gitattributes  .gitignore  .mailmap  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: main.yml
amaranth_boards/: __init__.py  alchitry_au.py  alchitry_cu.py  alchitry_io.py  alchitry_pt_v2.py  alchitry_ptv2.py  alinx_ax7325b.py  arrow_deca.py  arty_a7.py  arty_s7.py  arty_s7_25.py  arty_s7_50.py  arty_z7.py  atlys.py  blackice.py  blackice_ii.py  butterstick.py  chameleon96.py  cmod_a7.py  cmod_s7.py  colorlight_5a75b_r7_0.py  colorlight_5a75b_r8_0.py  colorlight_i9_r7_2.py  cora_z7.py  de0.py  de0_cv.py  de0nano.py  de10_lite.py  de10_nano.py  de10_standard.py  de1_soc.py  digilent_spartan3e.py  doppler.py  ebaz4205.py  ecp5_5g_evn.py  ecpix5.py  elbert_v2.py  fomu_hacker.py  fomu_pvt.py  gatemate_a1_evb.py  (+53 more)
amaranth_boards/extensions/: pmod.py
amaranth_boards/resources/: __init__.py  display.py  interface.py  memory.py  user.py
amaranth_boards/test/: blinky.py  blinky_gpio.py
docs/: boards_table.md
nmigen_boards/: __init__.py  _blinky.py  _version.py  alchitry_au.py  arrow_deca.py  arrow_sockit.py  arty_a7.py  arty_s7.py  arty_z7.py  atlys.py  basys3.py  blackice.py  blackice_ii.py  chameleon96.py  cmod_a7.py  colorlight_5a75b_r7_0.py  colorlight_5a_75b_7_0.py  colorlight_i5.py  colorlight_i5_r7_0.py  colorlight_i5_r7_0_ext_board.py  colorlight_i9.py  de0.py  de0_cv.py  de0_nano.py  de0cv.py  de10_lite.py  de10_nano.py  de1_soc.py  de2_115.py  de4.py  ebaz4205.py  ecp5_5g_evn.py  ecpix5.py  fomu_hacker.py  fomu_pvt.py  genesys2.py  ice40_hx1k_blink_evn.py  ice40_hx8k_b_evn.py  ice40_up5k_b_evn.py  icebreaker.py  (+44 more)
nmigen_boards/dev/: __init__.py  display.py  flash.py  sd.py  spi.py  sram.py  uart.py  user.py
nmigen_boards/ext/: pmod.py
nmigen_boards/extensions/: __init__.py  pmod.py
nmigen_boards/resources/: __init__.py  display.py  interface.py  memory.py  user.py
nmigen_boards/test/: __init__.py  blinky.py
