# Project metadata

[tool.pdm.version]
source = "scm"

[project]
dynamic = ["version"]

name = "amaranth-boards"
description = "Board and connector definitions for Amaranth HDL"
authors = [{name = "Amaranth HDL contributors"}]
license = {file = "LICENSE.txt"}

requires-python = "~=3.9"
dependencies = [
  # this version requirement needs to be synchronized with the one in .github/workflows/main.yml
  "amaranth>=0.5,<0.7",
]

[project.urls]
"Source Code" = "https://github.com/amaranth-lang/amaranth-boards"
"Bug Tracker" = "https://github.com/amaranth-lang/amaranth-boards/issues"

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.dev-dependencies]
toolchain = [
  "amaranth-yosys",
  "yowasp-yosys",
  "yowasp-nextpnr-ice40",
  "yowasp-nextpnr-ecp5",
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test.cmd = "python -m unittest discover -t . -s amaranth_boards -p *.py"
